--- a/Data/Data Collection/Data Combined/Combinator.ipynb
+++ b/Data/Data Collection/Data Combined/Combinator.ipynb
@@ -2291,7 +2291,7 @@
    },
    "outputs": [],
    "source": [
-    "df.to_csv('dataset_17-18.csv')"
+    "df.to_csv('dataset_17-18.csv',)"
    ]
   },
   {
